--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
     "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
-  "author": "Akshat Trivedi",
+  "author": "Ayush Trivedi",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
