--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "forever": "^4.0.0",
     "mysql": "^2.18.1",
     "parcel-bundler": "^1.12.4",
     "pug": "^3.0.0",
